# rhiza

./: .gitignore  CONTRIBUTING.md  Cargo.toml  LICENSE  README.md  WHITEPAPER.md  llms.txt
.github/: metadata.json
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
rhiza-cli/: Cargo.toml
rhiza-cli/src/: main.rs
rhiza-core/: Cargo.toml
rhiza-core/src/: lib.rs
rhiza-core/src/consensus/: finality.rs  mod.rs  relay.rs  weight.rs
rhiza-core/src/crypto/: hash.rs  keys.rs  mod.rs
rhiza-core/src/dag/: mod.rs  transaction.rs  validator.rs  vertex.rs
rhiza-core/src/network/: gossip.rs  mesh.rs  mod.rs  peer.rs
rhiza-core/src/wallet/: address.rs  keystore.rs  mod.rs
rhiza-node/: Cargo.toml
rhiza-node/src/: api.rs  config.rs  main.rs  storage.rs
rhiza-node/static/: index.html
