[workspace]
members = [
    "rhiza-core",
    "rhiza-node",
    "rhiza-cli",
]
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2021"
license = "MIT"
authors = ["Rhiza Contributors"]
description = "A truly decentralized currency protocol"
repository = "https://github.com/rhiza-protocol/rhiza"

[workspace.dependencies]
# Cryptography
ed25519-dalek = { version = "2", features = ["rand_core", "serde"] }
blake3 = "1"
rand = "0.8"
bech32 = "0.11"

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"
bincode = "1"

# Async runtime
tokio = { version = "1", features = ["full"] }

# Networking
libp2p = { version = "0.54", features = ["gossipsub", "mdns", "noise", "tcp", "yamux", "tokio", "identify", "macros"] }

# Storage
sled = "0.34"

# CLI
clap = { version = "4", features = ["derive"] }

# HTTP API
axum = "0.7"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Error handling
thiserror = "2"
anyhow = "1"

# Time
chrono = { version = "0.4", features = ["serde"] }

# Hex encoding
hex = "0.4"

# Path utilities
shellexpand = "3"
dirs-next = "2"

# Testing
tempfile = "3"
