[package]
name = "rhiza-cli"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "CLI wallet and tools for the Rhiza decentralized currency"

[dependencies]
rhiza-core = { path = "../rhiza-core" }
clap.workspace = true
serde.workspace = true
serde_json.workspace = true
tokio.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
anyhow.workspace = true
hex.workspace = true
dirs-next.workspace = true
