[package]
name = "rhiza-core"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Core protocol library for the Rhiza decentralized currency"

[dependencies]
ed25519-dalek.workspace = true
blake3.workspace = true
rand.workspace = true
bech32.workspace = true
serde.workspace = true
serde_json.workspace = true
bincode.workspace = true
chrono.workspace = true
hex.workspace = true
thiserror.workspace = true
tracing.workspace = true

[dev-dependencies]
tempfile.workspace = true
