[package]
name = "rhiza-node"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Node daemon for the Rhiza decentralized currency network"

[dependencies]
rhiza-core = { path = "../rhiza-core" }
tokio.workspace = true
libp2p.workspace = true
sled.workspace = true
axum.workspace = true
serde.workspace = true
serde_json.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
clap.workspace = true
anyhow.workspace = true
chrono.workspace = true
hex.workspace = true
shellexpand.workspace = true
bincode.workspace = true
